<resources>
    <string name="app_name">Quiz Game</string>
    <string name="time">На время</string>
    <string name="options_text">Настройки</string>
    <string name="campaign_text">Кампания</string>
    <string name="survival_text">Выживание</string>
    <string name="back_campaign">Назад</string>
    <string name="sound">Звук</string>
    <string name="vibration">Вибрация</string>
    <string name="notification">Уведомления</string>
    <string name="progress">Прогресс</string>
    <string name="reset">Сбросить</string>

    <string name="web_client_id">849738737756-ua3bctadteulmnujn9caac3hdcu9gon7.apps.googleusercontent.com</string>

    <string name="_food_1">1</string>
    <string name="_food_2">2</string>
    <string name="_food_3">3</string>
    <string name="_food_4">4</string>
    <string name="_food_5">5</string>
    <string name="_food_6">6</string>
    <string name="_food_7">7</string>
    <string name="_food_8">8</string>
    <string name="_food_9">9</string>
    <string name="_food_10">10</string>
    <string name="_food_11">11</string>
    <string name="_food_12">12</string>
    <string name="_food_13">13</string>
    <string name="_food_14">14</string>
    <string name="_food_15">15</string>
    <string name="_food_16">16</string>
    <string name="_food_17">17</string>
    <string name="_food_18">18</string>
    <string name="_food_19">19</string>
    <string name="_food_20">20</string>

    <string name="num_correct_answers_time">Вы ответили правильно на %d из %d вопросов.</string>
    <string name="num_correct_answers_survival">Вы ответили правильно на %d вопросов.</string>

    <string name="num_score">Рекорд %d</string>
    <string name="num_score_settings">рекорд %d</string>
    <string name="num_campaign_settings">%d/140</string>

    <color name="correct">#4CAF50</color>
    <color name="incorrect">#F44336</color>

    <string name="enter_nickname">Введите свой никнейм:</string>
    <string name="accept">Принять</string>

    //Content description
    <string name="past_level">Past level</string>
    <string name="next_level">Next level</string>
    <string name="answer_button">Answer button</string>
    <string name="info_button">Info button</string>
</resources>