<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".set_level">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="10dp"/>

    <LinearLayout
        android:id="@+id/container_campaign_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:id="@+id/container_campaign_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        app:columnCount="5">

                        <Button
                            android:id="@+id/set_level1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_1"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_2"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_3"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_4"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_5"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_6"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_7"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level8"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_8"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_9"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level10"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_10"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level11"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_11"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_12"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level13"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_13"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level14"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_14"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level15"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_15"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_16"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level17"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_17"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level18"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_18"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level19"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_19"
                            app:layout_columnWeight="1" />

                        <Button
                            android:id="@+id/set_level20"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:background="@drawable/answer_button_background"
                            android:text="@string/_food_20"
                            app:layout_columnWeight="1" />
                    </androidx.gridlayout.widget.GridLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>